--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -17,11 +17,13 @@
 # For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
 
-name: Build and deploy Python app to Azure Web App
+name: Build and deploy Python app to Azure Web App - doc-matcher-app
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name  # set this to the name of your Azure Web App
-  PYTHON_VERSION: '3.8'              # set this to the Python version to use
+  AZURE_WEBAPP_NAME: doc-matcher-app   # exact name of your Web App
+  AZURE_WEBAPP_PACKAGE_PATH: '.'       # app is in repo root
+  PYTHON_VERSION: '3.11'               # match App Service Python version
+
 
 on:
   push:
