--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-pytesseract
-pdf2image
-Pillow
 streamlit
-sentence-transformers
-faiss-cpu
-spacy
-rapidfuzz
 pandas
-openpyxl
-python-magic
-streamlit
+numpy
 requests
 reportlab
+rapidfuzz
 python-dotenv
-
+pytesseract
+pdf2image
+openpyxl
+pydeck
+pyarrow
